Miscellaneous code cleanups